--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
     <title>ART</title>
   </head>
   <body class="h-[100svh] bg-color flex text-neutral-300">
-    <aside class="w-[10%] pt-[4svh] border-r border-neutral-500">
-      <h1 class="text-center text-4xl tracking-wide righteous-regular">ART</h1>
+    <aside class="w-[10%] pt-[4svh] border-r border-neutral-500 hidden lg:block">
+      <h1 class="text-center text-lg xl:text-4xl tracking-wide righteous-regular">ART</h1>
     </aside>
     <main class="w-full overflow-hidden" id="indicators-carousel" data-carousel="static">
-      <header class="h-[10svh] pr-[13rem] flex items-center justify-end">
-        <nav>
-          <ul class="flex gap-x-16">
+      <header class="h-[10svh]  lg:pr-[5rem] xl:pr-[7rem]  2xl:pr-[13rem]  flex items-center justify-center lg:justify-end">
+        <nav class="flex justify-between items-center">
+            <div class="block lg:hidden w-[10rem] pr-[5rem]">
+                <h1 class="text-center text-lg xl:text-4xl tracking-wide righteous-regular">ART</h1>
+            </div>
+          <ul class="flex gap-x-8 lg:gap-x-12 xl:gap-x-16">
             <li><button type="button" class="px-2 rounded-sm font-light text-base" aria-current="true" aria-label="Slide 1" data-carousel-slide-to="0">Home</button></li>
             <li><button type="button" class="px-2 rounded-sm font-light text-base" aria-current="false" aria-label="Slide 2" data-carousel-slide-to="1">Product</button></li>
             <li><button type="button" class="px-2 rounded-sm font-light text-base" aria-current="false" aria-label="Slide 3" data-carousel-slide-to="2">About</button></li>
@@ -36,7 +39,7 @@
                 
                     <div class="flex">
                         <div class="w-[20%] pl-5">
-                            <h1 class="border-b border-neutral-500">Work Collections</h1>
+                            <h1 class="border-b border-neutral-500 text-xs lg:text-base">Work Collections</h1>
                             <div class="mt-2 space-y-1">
                                 <button class="block panel active" onclick="showCollection('collection-1')">Collection 1</button>
                                 <button class="block panel" onclick="showCollection('collection-2')">Collection 2</button>
@@ -92,7 +95,7 @@
                         </div>
 
                     </div>
-                    <div class="secondary-bg-color h-[20svh] pl-[2rem] pt-[2svh] flex gap-x-[20rem]  text-neutral-400">
+                    <div class="secondary-bg-color h-[20svh] pl-[2rem] pt-[2svh] flex gap-x-[3rem] sm:gap-x-[5rem] lg:gap-x-[10rem] xl:gap-x-[20rem]  text-neutral-400">
                         <span>
                             <h1 class="font-bold">Events</h1>
                             <h3 class="text-xs tracking-wide text-neutral-500">3312 Wilson Street</h3>
