--- a/index.html
+++ b/index.html
@@ -34,27 +34,16 @@
             </button>
         </div>
       </header>
-
-      <!-- <aside class="fixed right-0 top-0 h-full z-40 w-zero block sm:hidden" id="sidebar">
-        <ul class="flex flex-col gap-y-10 p-5 pt-[5rem] block sm:hidden">
-            <li><button type="button" class="px-2 rounded-sm font-light text-base block sm:hidden" aria-current="true" aria-label="Slide 1" data-carousel-slide-to="0">Home</button></li>
-            <li><button type="button" class="px-2 rounded-sm font-light text-base block sm:hidden" aria-current="false" aria-label="Slide 2" data-carousel-slide-to="1">Product</button></li>
-            <li><button type="button" class="px-2 rounded-sm font-light text-base block sm:hidden" aria-current="false" aria-label="Slide 3" data-carousel-slide-to="2">About</button></li>
-            <li><button type="button" class="px-2 rounded-sm font-light text-base block sm:hidden" aria-current="false" aria-label="Slide 4" data-carousel-slide-to="3">Contact</button></li>
-            <li><button type="button" class="px-2 rounded-sm font-light text-base block sm:hidden" aria-current="false" aria-label="Slide 5" data-carousel-slide-to="4">IDK</button></li>
-        </ul>
-    </aside> -->
-
-    
-        <div class="h-[85svh] relative w-[90%] overflow-hidden ">
+  
+        <div class="h-[85svh] relative w-full md:w-[90%] overflow-hidden ">
             <!-- Carousel wrapper -->
             <div class="relative h-[100svh] rounded-lg">
                 <!-- Item 1 -->
                 <div class="hidden duration-700 ease-in-out" data-carousel-item="active">
                     <div  iv class="w-auto" id="home">
                     
-                        <div class="flex">
-                            <div class="w-[20%] pl-5">
+                        <div class="flex flex-col md:flex-row">
+                            <div class="md:w-[20%] pl-5">
                                 <h1 class="border-b border-neutral-500 text-xs lg:text-base">Work Collections</h1>
                                 <div class="mt-2 space-y-1">
                                     <button class="block panel active" onclick="showCollection('collection-1')">Collection 1</button>
@@ -66,13 +55,32 @@
                             <!-- Collection wrapper -->
                             <div class="w-full h-[70svh] relative">
 
-                                <div class="collections active h-full" id="collection-1">
-                                    <div class="w-3/4 flex items-center justify-center">
-                                        <img src="/img/statue-1.png" alt="" width="200">
+                                <div class="collections active h-full flex-col md:flex-row" id="collection-1">
+                                    <div class="w-full lg:w-3/4 flex items-center justify-center p-5 md:p-10">                                    
+                                        <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
+                                            <div>
+                                                <img class="h-full max-w-full rounded-lg" src="img/nimbus.jpg" alt="">
+                                            </div>
+                                            <div>
+                                                <img class="h-full max-w-full rounded-lg" src="img/hope-of-life.jpg" alt="">
+                                            </div>
+                                            <div>
+                                                <img class="h-full max-w-full rounded-lg" src="img/leap-of-faith.jpg" alt="">
+                                            </div>
+                                            <div>
+                                                <img class="h-full max-w-full rounded-lg" src="img/microworld.jpg" alt="">
+                                            </div>
+                                            <div>
+                                                <img class="h-full max-w-full rounded-lg" src="" alt="">
+                                            </div>
+                                            <div>
+                                                <img class="h-full max-w-full rounded-lg" src="" alt="">
+                                            </div>                                                         
+                                        </div>
                                     </div>
-                                    <div class="w-1/2 pt-[7svh]">
-                                        <h1 class="righteous-regular text-2xl pb-[4svh]">DO WORK</h1>
-                                        <p class="font-extralight text-sm tracking-wide">
+                                    <div class="md:w-1/2 md:pt-[7svh] p-4 md:pl-0">
+                                        <h1 class="righteous-regular text-lg md:text-2xl pb-2 md:pb-[4svh]">DO WORK</h1>
+                                        <p class="font-extralight text-xs sm:text-sm tracking-wide">
                                             a three-dimensional representation usually of a person, animal,
                                             or mythical being that is produced by sculpturing, modeling, or
                                             casting.a three-dimensional representation of a person, animal, or
@@ -111,23 +119,25 @@
                             </div>
 
                         </div>
-                        <div class="secondary-bg-color h-[20svh] pl-[2rem] pt-[2svh] flex gap-x-[3rem] sm:gap-x-[5rem] lg:gap-x-[10rem] xl:gap-x-[20rem]  text-neutral-400">
-                            <span>
-                                <h1 class="font-bold">Events</h1>
-                                <h3 class="text-xs tracking-wide text-neutral-500">3312 Wilson Street</h3>
-                                <h4 class="text-xs tracking-wide ">San Diego</h4>
-                                <h5 class="text-xs font-extralight">UTC-8: Pacific Standard Time (PST)</h5>
-                            </span>
-                            <span class="pt-7">
-                                <h3 class="text-xs tracking-wide text-neutral-500">3312 Wilson Street</h3>
-                                <h4 class="text-xs tracking-wide">San Diego</h4>
-                                <h5 class="text-xs font-extralight">UTC-8: Pacific Standard Time (PST)</h5>
-                            </span>
-                            <span class="pt-7">      
-                                <h3 class="text-xs tracking-wide text-neutral-500">3312 Wilson Street</h3>
-                                <h4 class="text-xs tracking-wide">San Diego</h4>
-                                <h5 class="text-xs font-extralight">UTC-8: Pacific Standard Time (PST)</h5>
-                            </span>
+                        <div class="hidden md:block">
+                            <div class="secondary-bg-color h-[20svh] pl-[2rem] pt-[2svh] flex gap-x-[3rem] sm:gap-x-[5rem] lg:gap-x-[10rem] xl:gap-x-[20rem] text-neutral-400">
+                                <span>
+                                    <h1 class="font-bold">Details</h1>
+                                    <h3 class="text-xs tracking-wide text-neutral-500">3312 Wilson Street</h3>
+                                    <h4 class="text-xs tracking-wide ">San Diego</h4>
+                                    <h5 class="text-xs font-extralight">UTC-8: Pacific Standard Time (PST)</h5>
+                                </span>
+                                <span class="pt-7">
+                                    <h3 class="text-xs tracking-wide text-neutral-500">3312 Wilson Street</h3>
+                                    <h4 class="text-xs tracking-wide">San Diego</h4>
+                                    <h5 class="text-xs font-extralight">UTC-8: Pacific Standard Time (PST)</h5>
+                                </span>
+                                <span class="pt-7">      
+                                    <h3 class="text-xs tracking-wide text-neutral-500">3312 Wilson Street</h3>
+                                    <h4 class="text-xs tracking-wide">San Diego</h4>
+                                    <h5 class="text-xs font-extralight">UTC-8: Pacific Standard Time (PST)</h5>
+                                </span>
+                            </div>
                         </div>
                     </div>
                 </div>
