--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1 class="text-center text-lg xl:text-4xl tracking-wide righteous-regular">ART</h1>
     </aside>
     <main class="w-full overflow-hidden" id="indicators-carousel" data-carousel="static">
-      <header class="h-[10svh] px-10 lg:pr-[5rem] xl:pr-[7rem] 2xl:pr-[13rem] flex items-center  lg:justify-end">
+      <header class="h-[10svh] px-5 md:px-10 lg:pr-[5rem] xl:pr-[7rem] 2xl:pr-[13rem] flex items-center  lg:justify-end">
         <nav class="flex w-full justify-between items-center lg:justify-end">
             <div class="block lg:hidden">
                 <h1 class="text-center text-lg xl:text-4xl tracking-wide righteous-regular">ART</h1>
