--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
                                 <div class="collections active h-full flex-col md:flex-row" id="collection-1">
                                     <div class="w-full lg:w-3/4 flex items-center justify-center p-5 md:p-10">                                    
-                                        <div class="h-[50svh] grid grid-cols-2 md:grid-cols-3 gap-4">
+                                        <div class="grid grid-cols-3 gap-4">
                                             <div>
                                                 <img class="h-full max-w-full rounded-lg" src="img/nimbus.jpg" alt="">
                                             </div>
