--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>ART</title>
   </head>
-  <body class="h-[100svh] bg-color flex text-neutral-300">
+  <body class="h-screen bg-color flex text-neutral-300">
     <aside class="w-[10%] pt-[4svh] border-r border-neutral-500 hidden lg:block">
       <h1 class="text-center text-lg xl:text-4xl tracking-wide righteous-regular">ART</h1>
     </aside>
@@ -54,10 +54,9 @@
 
                             <!-- Collection wrapper -->
                             <div class="w-full h-[70svh] relative">
-
                                 <div class="collections active h-full flex-col md:flex-row" id="collection-1">
                                     <div class="w-full lg:w-3/4 flex items-center justify-center p-5 md:p-10">                                    
-                                        <div class="grid grid-cols-3 gap-4">
+                                        <div class="grid grid-cols-3 gap-4 pointer-events-none">
                                             <div>
                                                 <img class="h-full max-w-full rounded-lg" src="img/nimbus.jpg" alt="">
                                             </div>
@@ -79,7 +78,7 @@
                                         </div>
                                     </div>
                                     <div class="md:w-1/2 md:pt-[7svh] p-4 md:pl-0">
-                                        <h1 class="righteous-regular text-lg md:text-2xl pb-2 md:pb-[4svh]">DO WORK</h1>
+                                        <h1 class="righteous-regular text-lg md:text-2xl pb-2 md:pb-[4svh]">T-DESIGN</h1>
                                         <p class="font-extralight text-xs sm:text-sm tracking-wide">
                                             a three-dimensional representation usually of a person, animal,
                                             or mythical being that is produced by sculpturing, modeling, or
@@ -88,33 +87,67 @@
                                         </p>                       
                                     </div>                               
                                 </div>                                       
-                                <div class="collections h-full" id="collection-2">
-                                    <div class="w-3/4 flex items-center justify-center">
-                                        <img src="/img/statue-1.png" alt="" width="300">
-                                    </div>
-                                    <div class="w-1/2 pt-[7svh]">
-                                        <h1 class="righteous-regular text-2xl pb-[4svh]">DO THINGS</h1>
-                                        <p class="font-extralight text-sm tracking-wide">
-                                            a three-dimensional representation usually of a person, animal,
-                                            or mythical being that is produced by sculpturing, modeling, or
-                                            casting.a three-dimensional representation of a person, animal, or
-                                            mythical being that is
+                                <div class="collections h-full flex-col md:flex-row" id="collection-2">
+                                    <div class="w-full lg:w-3/4 flex items-center justify-center p-5 md:p-10">                                    
+                                        <div class="grid grid-cols-3 gap-4 pointer-events-none">
+                                            <div>
+                                                <img class="h-full max-w-full rounded-lg" src="img/vexel-1.jpg" alt="">
+                                            </div>
+                                            <div>
+                                                <img class="h-full max-w-full rounded-lg" src="img/vexel-2.jpg" alt="">
+                                            </div>
+                                            <div>
+                                                <img class="h-full max-w-full rounded-lg" src="img/vexel-3.jpg" alt="">
+                                            </div>                                       
+                                            <div>
+                                                <img class="h-full max-w-full rounded-lg" src="" alt="">
+                                            </div>
+                                            <div>
+                                                <img class="h-full max-w-full rounded-lg" src="" alt="">
+                                            </div>                                                         
+                                        </div>
+                                    </div>                          
+                                    <div class="md:w-1/2 md:pt-[7svh] p-4 md:pl-0">
+                                        <h1 class="righteous-regular text-lg md:text-2xl pb-2 md:pb-[4svh]">VEXEL</h1>
+                                        <p class="font-extralight text-xs sm:text-sm tracking-wide">
+                                            Vexel is a neologism for an entirely pixel-based form of raster art that imitates the visual appearance of vector graphics technique. 
+                                            The word itself is a portmanteau derived from a combination of "vector" and "pixel."
                                         </p>                       
-                                    </div>                               
+                                    </div>                                  
                                 </div>                                       
-                                <div class="collections h-full" id="collection-3">
-                                    <div class="w-3/4 flex items-center justify-center">
-                                        <img src="/img/statue-1.png" alt="" width="400">
-                                    </div>
-                                    <div class="w-1/2 pt-[7svh]">
-                                        <h1 class="righteous-regular text-2xl pb-[4svh]">LET ME COOK</h1>
-                                        <p class="font-extralight text-sm tracking-wide">
-                                            a three-dimensional representation usually of a person, animal,
-                                            or mythical being that is produced by sculpturing, modeling, or
-                                            casting.a three-dimensional representation of a person, animal, or
-                                            mythical being that is
+                                <div class="collections h-full flex-col md:flex-row" id="collection-3">
+                                    <div class="w-full lg:w-3/4 flex items-center justify-center p-5 md:p-10">                                    
+                                        <div class="grid grid-cols-3 gap-4 pointer-events-none">
+                                            <div>
+                                                <img class="h-full max-w-full rounded-lg" src="img/Photo-(1).jpg" alt="">
+                                            </div>
+                                            <div>
+                                                <img class="h-full max-w-full rounded-lg" src="img/Photo-(7).jpg" alt="">
+                                            </div>
+                                            <div>
+                                                <img class="h-full max-w-full rounded-lg" src="img/Photo-(3).jpg" alt="">
+                                            </div>                                       
+                                            <div>
+                                                <img class="h-full max-w-full rounded-lg" src="img/Photo-(8).jpg" alt="">
+                                            </div>
+                                            <div>
+                                                <img class="h-full max-w-full rounded-lg" src="img/Photo-(5).jpg" alt="">
+                                            </div>                                                         
+                                            <div>
+                                                <img class="h-full max-w-full rounded-lg" src="img/Photo-(6).jpg" alt="">
+                                            </div>                                                         
+                                                                                                  
+                                        </div>
+                                    </div>                                  
+                                    <div class="md:w-1/2 md:pt-[7svh] p-4 md:pl-0">
+                                        <h1 class="righteous-regular text-lg md:text-2xl pb-2 md:pb-[4svh]">PHOTO MANIPULATION</h1>
+                                        <p class="font-extralight text-xs sm:text-sm tracking-wide">
+                                            the process of altering or enhancing a photograph using various techniques and tools, 
+                                            often with the goal of creating a new and different visual representation. 
+                                            This can involve combining multiple images, adjusting colors, adding or removing elements, 
+                                            or applying filters and effects.
                                         </p>                       
-                                    </div>                               
+                                    </div>                                  
                                 </div>                                       
                             </div>
 
