--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                         <div class="hidden md:block">
                             <div class="secondary-bg-color h-[20svh] pl-[2rem] pt-[2svh] flex gap-x-[3rem] sm:gap-x-[5rem] lg:gap-x-[10rem] xl:gap-x-[20rem] text-neutral-400">
                                 <span>
-                                    <h1 class="font-bold text-sm lg:text-base">Profile Information</h1>
+                                    <h1 class="font-bold text-sm lg:text-md">Profile Information</h1>
                                     <h3 class="text-xs tracking-wide text-neutral-500">Full Name:</h3>
                                     <h4 class="text-xs tracking-wide ">Lowell S. Tebrero</h4>
                                     <h5 class="text-xs font-extralight">25 Years of existing</h5>
@@ -353,8 +353,9 @@
                                 </div>
                               </form>
                             </div>
-                            <div class="w-full lg:w-[45%] flex flex-col gap-y-3 pt-[5svh] items-center lg:items-start">
-                                <h1 class="righteous-regular text-2xl pb-[5svh]">Let's Collab?</h1>
+                            <div class="w-full lg:w-[45%] flex flex-col gap-y-3 pt-[2svh] lg:pt-[5svh] items-center lg:items-start">
+                                <h1 class="righteous-regular text-xl lg:text-2xl pb-[1svh] lg:pb-[5svh]">Let's Collab?</h1>
+                                <img src="img/sample-me.png" width="200" alt="">
                                 <div class="gap-y-2">                              
                                     <div class="flex gap-x-3">
                                             <img src="img/mail.png" width="30" alt="" />
@@ -373,23 +374,25 @@
                                 </div>                         
                             </div>
                         </div>
-                        <div class="hidden lg:block secondary-bg-color h-[20svh] pl-[2rem] pt-[2svh] flex gap-x-[20rem]  text-neutral-400">
-                            <span>
-                                <h1 class="font-bold">All Right Reserved &copy;</h1>
-                                <h3 class="text-xs tracking-wide text-neutral-500">L-ART</h3>
-                                <h4 class="text-xs tracking-wide">2024</h4>
-                                <!-- <h5 class="text-xs font-extralight">UTC-8: Pacific Standard Time (PST)</h5> -->
-                            </span>
-                            <span class="pt-7">
-                                <h3 class="text-xs tracking-wide text-neutral-500">Check my Portfolio</h3>
-                                <h4 class="text-xs tracking-wide"><a href="https://lowelltebrero.github.io/" target="_blank">Click here!</a></h4>
-                                <!-- <h5 class="text-xs font-extralight"><a href="https://lowelltebrero.github.io/" target="_blank"> DEV LOWELL</a></h5> -->
-                            </span>
-                            <span class="pt-7">      
-                                <h3 class="text-xs tracking-wide text-neutral-500">Github</h3>
-                                <h4 class="text-xs tracking-wide">https://github.com/LowellTebrero</h4>
-                                <h5 class="text-xs font-extralight"></h5>
-                            </span>
+                        <div class="hidden lg:block">
+                            <div class="secondary-bg-color h-[20svh] pl-[2rem] pt-[2svh] flex gap-x-[20rem]  text-neutral-400">
+                                <span>
+                                    <h1 class="font-bold text-sm lg:text-md">All Right Reserved &copy;</h1>
+                                    <h3 class="text-xs tracking-wide text-neutral-500">L-ART</h3>
+                                    <h4 class="text-xs tracking-wide">2024</h4>
+                                    <!-- <h5 class="text-xs font-extralight">UTC-8: Pacific Standard Time (PST)</h5> -->
+                                </span>
+                                <span class="pt-7">
+                                    <h3 class="text-xs tracking-wide text-neutral-500">Check my Portfolio</h3>
+                                    <h4 class="text-xs tracking-wide"><a href="https://lowelltebrero.github.io/" target="_blank">Click here!</a></h4>
+                                    <!-- <h5 class="text-xs font-extralight"><a href="https://lowelltebrero.github.io/" target="_blank"> DEV LOWELL</a></h5> -->
+                                </span>
+                                <span class="pt-7">      
+                                    <h3 class="text-xs tracking-wide text-neutral-500">Github</h3>
+                                    <h4 class="text-xs tracking-wide">https://github.com/LowellTebrero</h4>
+                                    <h5 class="text-xs font-extralight"></h5>
+                                </span>
+                            </div>
                         </div>
                     </div>
                 </div>
