--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="block lg:hidden">
                 <h1 class="text-center text-lg xl:text-4xl tracking-wide righteous-regular">ART</h1>
             </div>
-            <div class="fixed md:relative right-[-8rem] md:right-0 top-0 h-full md:w-auto z-40" id="sidebar">
+            <div class="fixed md:relative right-[-8rem] md:right-0 top-0 h-full md:w-auto z-40 w-zero" id="sidebar">
                 <ul class="flex flex-col md:flex-row gap-y-7 pt-[5rem] pl-[2rem] md:pt-[0rem] md:pl-[0rem] md:gap-y-0 md:gap-x-8 lg:gap-x-12 xl:gap-x-16">
                     <li><button type="button" class="px-2 rounded-sm font-light text-base nav" aria-current="true" aria-label="Slide 1" data-carousel-slide-to="0">Home</button></li>
                     <li><button type="button" class="px-2 rounded-sm font-light text-base nav" aria-current="false" aria-label="Slide 2" data-carousel-slide-to="1">Photography</button></li>
